Fix wind effect, canvas fill, cell click, speed indicator