@@ -3,6 +3,7 @@ package simulation.ui;
 import javafx.application.Application;
 import javafx.scene.Scene;
 import javafx.scene.layout.BorderPane;
+import javafx.scene.layout.Pane;
 import javafx.stage.Stage;
 import simulation.services.Simulator;
 
@@ -16,37 +17,35 @@ import simulation.services.Simulator;
  *   <li>Bottom — {@link ControlPane}: all controls</li>
  *   <li>Left   — {@link LegendPane}: colour legend</li>
  * </ul>
- *
- * <p>Launch command:</p>
- * <pre>
- * java --module-path "PATH_TO_JAVAFX\lib"
- *      --add-modules javafx.controls,javafx.fxml
- *      -cp bin simulation.vue.MainApp
- * </pre>
  */
 public class MainApp extends Application {
 
     @Override
     public void start(Stage primaryStage) {
-        Simulator simulator = new Simulator();
+        Simulator   simulator   = new Simulator();
+        GridCanvas  gridCanvas  = new GridCanvas(simulator);
+        StatsPane   statsPane   = new StatsPane();
+        ControlPane controlPane = new ControlPane(simulator, gridCanvas, statsPane);
+        LegendPane  legendPane  = new LegendPane();
 
-        GridCanvas   gridCanvas   = new GridCanvas(simulator);
-        StatsPane    statsPane    = new StatsPane();
-        ControlPane  controlPane  = new ControlPane(simulator, gridCanvas, statsPane);
-        LegendPane   legendPane   = new LegendPane();
-
-        // Wire simulator → canvas + stats refresh
+        // Wire simulator refresh callback
         simulator.setOnRefresh(grid -> {
             gridCanvas.drawGrid(grid);
             statsPane.update(simulator.computeStats());
         });
 
-        // Wrap Canvas in a Pane to make it resizable and bind dimensions
-        javafx.scene.layout.Pane canvasWrapper = new javafx.scene.layout.Pane(gridCanvas);
+        // Wrap canvas in a Pane so it stretches with the window
+        Pane canvasWrapper = new Pane(gridCanvas);
         gridCanvas.widthProperty().bind(canvasWrapper.widthProperty());
         gridCanvas.heightProperty().bind(canvasWrapper.heightProperty());
-        gridCanvas.widthProperty().addListener((o, old, val) -> gridCanvas.resetZoom());
-        gridCanvas.heightProperty().addListener((o, old, val) -> gridCanvas.resetZoom());
+
+        // Redraw when canvas is resized
+        gridCanvas.widthProperty().addListener((o, old, val) -> {
+            if (val.doubleValue() > 0) gridCanvas.drawGrid(simulator.getGrid());
+        });
+        gridCanvas.heightProperty().addListener((o, old, val) -> {
+            if (val.doubleValue() > 0) gridCanvas.drawGrid(simulator.getGrid());
+        });
 
         BorderPane root = new BorderPane();
         root.setCenter(canvasWrapper);
@@ -55,22 +54,21 @@ public class MainApp extends Application {
         root.setLeft(legendPane);
 
         Scene scene = new Scene(root, 1280, 800);
-        scene.getStylesheets().add(
-                getClass().getResource("/simulation/vue/style.css") != null
-                ? getClass().getResource("/simulation/vue/style.css").toExternalForm()
-                : "");
 
         primaryStage.setTitle("Forest Fire Spread Simulation");
         primaryStage.setScene(scene);
-        primaryStage.show();
 
-        // Initial draw
-        gridCanvas.drawGrid(simulator.getGrid());
-        statsPane.update(simulator.computeStats());
+        // Reset zoom AFTER the stage is fully shown so canvas has real dimensions
+        primaryStage.setOnShown(e -> {
+            gridCanvas.resetZoom();
+            statsPane.update(simulator.computeStats());
+        });
+
+        primaryStage.show();
     }
 
     /**
-     * Application entry point — delegates to JavaFX launch mechanism.
+     * Application entry point.
      *
      * @param args command-line arguments (ignored)
      */
